--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Job Search</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
   <div class="container">
@@ -22,3 +22,11 @@
       <button type="submit">Search</button>
     </form>
 
+    <div id="results">
+        <!-- search results -->
+      </div>
+    </div>
+  
+    <script src="js/script.js"></script>
+  </body>
+  </html>
